<resources>
    <string name="app_name">AnyX</string>

    <string name="file">File</string>
    <string name="image">Photos</string>
    <string name="video">Videos</string>
    <string name="song">Song</string>
    <string name="app">App</string>
    <string name="home">Home</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="settings">Settings</string>
    <string name="search_peers">Search Peers</string>
    <string name="my_device_address">My Address</string>

    <string name="sort_order_by_a_to_z">A-Z</string>
    <string name="sort_order_by_size">Size</string>
    <string name="sort_order_by_last_modified">Last Modified</string>

    <string name="AnyX_needs_these_permissions"><b>AnyX</b> needs these <b>permissions</b></string>

    <string name="sort_order_descending">Descending</string>

    <string name="connected">Connected</string>

    <string name="sending">Sending</string>
    <string name="receiving">Receiving</string>
    <string name="in_progress">In progress</string>
    <string name="error">Error</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="open">Open</string>
    <string name="newest_first">Newest first</string>
    <string name="oldest_first">Oldest first</string>

    <string name="largest_first">Largest first</string>
    <string name="smallest_first">Smallest first</string>

    <string name="open_with">Open with</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>

    <string name="close">Close</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="continue_send">Continue sending</string>
    <string name="files">Files</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
    <string name="sort_by">Sort by</string>
    <string name="send_connection_signal">Send Connection Signal</string>
    <string name="search">Search</string>
    <string name="speed">Speed</string>
    <string name="total">Total</string>
    <string name="cancel">Cancel</string>
    <string name="checking_permissions">Checking Permissions</string>
    <string name="android_location_access">Android Location Access</string>
    <string name="android_storage_access">Access files</string>
    <string name="storage_permission_reason">For accessing files and media</string>
    <string name="permission_title">AnyX needs following permission to function properly</string>
    <string name="checking_states">Checking States</string>
    <string name="grant">Allow</string>
    <string name="granted">Granted</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="select_items">Select Items</string>
    <string name="select_all">Select All</string>
    <string name="clear_all">Clear All</string>
    <string name="please_turn_on_these_belows">! Please turn on these manually</string>
    <string name="_settings">Settings</string>
    <string name="location_disabled">Location Disabled</string>
    <string name="location_enabled">Location Enabled</string>
    <string name="connecting">Connecting…</string>
    <string name="wifi_disabled">Wifi Disabled</string>
    <string name="wifi_enabled">Wifi enabled</string>

    <string name="searching_devices">Searching Sender</string>
    <string name="waiting_device">Waiting Device</string>

    <string name="sure_connecting">Confirm connection to</string>

    <string-array name="list_items_dummy">
        <item>dummy</item>
        <item>dummy</item>
        <item>dummy</item>
        <item>dummy</item>
        <item>dummy</item>
    </string-array>
    <string name="scan">Scan</string>

    <string name="details">Details</string>
    <string name="path">File path</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="tap_to_receive">Tap <b>Receive</b> on other devices</string>
    <string name="tap_to_send">Tap <b>Send</b> on other devices</string>
    <string name="connect">Connect</string>
    <string name="finding_devices">Finding Devices</string>
    <string name="consider_states_enabling">Consider turning on below services</string>
    <string name="lets_go">Let\'s go</string>
    <string name="bluetooth_enabled">Bluetooth Enabled</string>
    <string name="bluetooth_disabled">Bluetooth Disabled</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_permission">PermissionActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_re">ReActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="disconnect">Disconnect</string>
    <string name="file_info">File info</string>
    <string name="turn_on_necessary_wireless_services">"Give AnyX necessary wireless access"</string>
    <string name="before_you_share">Before you share</string>

</resources>