<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">

               <com.google.android.material.appbar.MaterialToolbar
                   android:id="@+id/toolbar"
                   android:layout_height="?attr/actionBarSize"
                   android:layout_width="match_parent"
                   app:title="@string/file_info">

               </com.google.android.material.appbar.MaterialToolbar>

     </com.google.android.material.appbar.AppBarLayout>

     <androidx.core.widget.NestedScrollView
         android:id="@+id/dialog_what_file_nested_scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

          <androidx.constraintlayout.widget.ConstraintLayout
              android:id="@+id/dialog_what_file_base_motion_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:id="@+id/dialog_what_file_content_holder"
                   android:layout_width="0dp"
                   android:layout_height="300dp"
                   android:background="?android:attr/windowBackground"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent">

               </androidx.constraintlayout.widget.ConstraintLayout>

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:id="@+id/base"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/dialog_what_file_content_holder">

                    <com.google.android.material.slider.Slider
                        android:id="@+id/bottom_dialog_what_file_media_slider"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:labelBehavior="withinBounds"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/dialog_what_file_duration_zero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        app:layout_constraintStart_toStartOf="@+id/linear"
                        app:layout_constraintTop_toBottomOf="@+id/bottom_dialog_what_file_media_slider" />

                    <TextView
                        android:id="@+id/dialog_what_file_duration_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        app:layout_constraintBottom_toBottomOf="@+id/dialog_what_file_duration_zero"
                        app:layout_constraintEnd_toEndOf="@+id/linear"
                        app:layout_constraintTop_toBottomOf="@+id/bottom_dialog_what_file_media_slider" />

                    <LinearLayout
                        android:id="@+id/linear"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/medium"
                        android:layout_marginEnd="@dimen/medium"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dialog_what_file_duration_zero">

                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/dialog_what_filename"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/medium"
                             android:layout_marginTop="@dimen/tiny"
                             android:layout_marginEnd="@dimen/medium"
                             android:layout_marginBottom="@dimen/tiny"
                             android:text="TextView"
                             android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/dialog_what_file_type"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/medium"
                             android:layout_marginTop="@dimen/tiny"
                             android:layout_marginEnd="@dimen/medium"
                             android:layout_marginBottom="@dimen/tiny"
                             android:singleLine="true"
                             android:text="TextView" />

                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/dialog_what_file_size"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/medium"
                             android:layout_marginTop="@dimen/tiny"
                             android:layout_marginEnd="@dimen/medium"
                             android:layout_marginBottom="@dimen/tiny"
                             android:singleLine="true"
                             android:text="TextView" />
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/dialog_what_file_play_media"
                        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/medium"
                        android:layout_marginEnd="@dimen/medium"
                        android:text="@string/play"
                        app:icon="@drawable/ic_baseline_play_arrow_24"
                        app:iconGravity="textStart"
                        app:layout_constraintBottom_toBottomOf="@+id/bottom_dialog_what_file_pause_media"
                        app:layout_constraintEnd_toStartOf="@+id/bottom_dialog_what_file_pause_media"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/bottom_dialog_what_file_pause_media" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bottom_dialog_what_file_pause_media"
                        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/medium"
                        android:layout_marginTop="@dimen/medium"
                        android:layout_marginEnd="@dimen/medium"
                        android:text="@string/pause"
                        app:icon="@drawable/ic_baseline_pause_24"
                        app:iconGravity="textStart"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/dialog_what_file_play_media"
                        app:layout_constraintTop_toBottomOf="@+id/linear" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bottom_dialog_what_file_close"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        android:layout_marginBottom="@dimen/medium"
                        android:text="@string/close"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bottom_dialog_what_file_pause_media" />


               </androidx.constraintlayout.widget.ConstraintLayout>


          </androidx.constraintlayout.widget.ConstraintLayout>

     </androidx.core.widget.NestedScrollView>

     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/dialog_what_file_scroll_down_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/medium"
         android:layout_marginBottom="@dimen/medium"
         android:clickable="true"

         android:visibility="gone"
         app:fabSize="auto"
         app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>